--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mongolian Timeline</title>
+  <title>Монголд бүртгэгдсэн шинэ коронавирусийн СЭЖИГТЭЙ ТОХИОЛДЛУУД</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      background-color: #f4f4f4;
+      margin: 0;
       padding: 20px;
     }
     .timeline {
@@ -18,15 +19,17 @@
     .timeline::after {
       content: '';
       position: absolute;
-      width: 4px;
+      width: 6px;
       background-color: #FF9F55;
       top: 0;
       bottom: 0;
       left: 50%;
+      margin-left: -3px;
     }
     .container {
       padding: 10px 40px;
       position: relative;
+      background-color: inherit;
       width: 50%;
     }
     .left {
@@ -35,55 +38,76 @@
     .right {
       left: 50%;
     }
-    .content {
-      padding: 20px;
-      background-color: white;
-      border-radius: 6px;
-    }
     .container::after {
       content: '';
       position: absolute;
-      width: 20px;
-      height: 20px;
+      width: 25px;
+      height: 25px;
+      right: -17px;
       background-color: white;
       border: 4px solid #FF9F55;
       top: 15px;
       border-radius: 50%;
-      right: -10px;
       z-index: 1;
     }
     .right::after {
-      left: -10px;
+      left: -16px;
+    }
+    .content {
+      padding: 20px 30px;
+      background-color: white;
+      position: relative;
+      border-radius: 6px;
+    }
+    @media screen and (max-width: 600px) {
+      .timeline::after {
+        left: 31px;
+      }
+      .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+      }
+      .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
+      .left::after, .right::after {
+        left: 15px;
+      }
+      .right {
+        left: 0%;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Mongolian Timeline Example</h2>
 
-  <div class="timeline">
+<h2>Монголд бүртгэгдсэн шинэ коронавирусийн СЭЖИГТЭЙ ТОХИОЛДЛУУД</h2>
+<p>Эх сурвалж: <a href="https://ikon.mn/p/1su6">iKon.mn</a></p>
 
-    <div class="container left">
-      <div class="content">
-        <h3>2020.03.29</h3>
-        <p>Сэжигтэй тохиолдол бүртгэгдээгүй.</p>
-      </div>
+<div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <h3>2020.03.29</h3>
+      <p>Гуравдугаар сарын 29-нд ХӨСҮТ болон Монгол Улсын хэмжээнд коронавирусийн сэжигтэй тохиолдол бүртгэгдээгүй.</p>
     </div>
-
-    <div class="container right">
-      <div class="content">
-        <h3>2020.03.28</h3>
-        <p>Коронавирусийн 12 дахь тохиолдол бүртгэгдэв.</p>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <h3>2020.03.26</h3>
-        <p>Шинээр сэжигтэй тохиолдол бүртгэгдээгүй.</p>
-      </div>
-    </div>
-
   </div>
+<div class="container right">
+  <div class="content">
+    <h3>2020.03.28</h3>
+    <p>Гуравдугаар сарын 28-нд сэжигтэй тохиолдол бүртгэгдээгүй. Харин Монгол Улсад лабораторийн шинжилгээгээр батлагдсан коронавирусийн 12 дахь тохиолдол бүртгэгдсэнийг ХӨСҮТ-ээс зарлав.</p>
+  </div>
+  <div class="container left">
+  <div class="content">
+    <h3>2020.03.28</h3>
+    <p>Гуравдугаар сарын 28-нд сэжигтэй тохиолдол бүртгэгдээгүй. Харин Монгол Улсад лабораторийн шинжилгээгээр батлагдсан коронавирусийн 12 дахь тохиолдол бүртгэгдсэнийг ХӨСҮТ-ээс зарлав.</p>
+  </div>
+</div>
+
+</div>
 
 </body>
 </html>
